# DeepCode

./: .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  SOULS.MD  docker-compose.yml  pyproject.toml  rxconfig.py
.github/: copilot-instructions.md
assets/: deepcode_reflex.css
deepcode/: __init__.py  __main__.py  chat_runtime.py  cli.py  config.py  exceptions.py  logging_config.py  preflight.py
deepcode/agents/: __init__.py  base.py  orchestrator.py  prompt_layers.py  reflection.py  task_state.py  tool_router.py
deepcode/api/: __init__.py  app.py  models.py  napcat_inbound_listener.py  platform_bridge.py  platform_delivery.py  platform_inbound_debug.py  platform_local_commands.py  platform_security.py  qq_gateway_listener.py
deepcode/api/routes/: __init__.py  chat.py  health.py  platforms.py  sessions.py  tasks.py
deepcode/extensions/: __init__.py  hook_rule_store.py  hooks.py  mcp_registry.py  remote_install.py  skill_archive_installer.py  skill_registry.py  skill_toggle_store.py
deepcode/governance/: __init__.py  approval_store.py  audit.py  policy_engine.py  policy_store.py
deepcode/llm/: __init__.py  base.py  factory.py  mock_client.py  openai_client.py
deepcode/memory/: __init__.py  long_term.py  short_term.py  task_memory.py
deepcode/storage/: __init__.py  platform_event_store.py  session_store.py  task_store.py
deepcode/tools/: __init__.py  base.py  code_executor.py  extension_tools.py  file_manager.py  script_runner.py  shell_tool.py  web_browser.py
deepcode/ui/: __init__.py  app.py  constants.py  helpers.py  page_renderers.py  theme.css  translations.py
deepcode/web_shared/: __init__.py  constants.py  translations.py
deepcode_reflex/: __init__.py  deepcode_reflex.py  state.py
docs/: 01_research_report.md  02_design_document.md  03_development_document.md  04_openclaw_claude_code_feature_research.md  05_deepcode_v2_feature_and_ui_blueprint.md  06_iteration_roadmap.md  07_execution_checklist.md  08_24h_agent_iteration_plan.md  09_project_overview_and_interview_guide.md  AGENTS_Version2.md
src/: __init__.py  analytics.py  parser.py  patterns.py
tests/: conftest.py  test_agents.py  test_api.py  test_chat_runtime.py  test_cli_napcat.py  test_config.py  test_extension_governance_stores.py  test_llm.py  test_memory.py  test_napcat_inbound_listener.py  test_openai_client.py  test_platform_event_store.py  test_platform_napcat_messages.py  test_policy_engine.py  test_preflight.py  test_reflex_state.py  test_remote_install.py  test_storage.py  test_task_storage.py  test_tools.py
