[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepcode"
version = "0.2.0"
description = "DeepCode Agent - An AI-powered software engineering assistant"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "DeepCode Team" }]
keywords = ["ai", "agent", "llm", "coding-assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.30.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langgraph>=0.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=2.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "chromadb>=0.5.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "reflex>=0.6.7",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
]

[project.urls]
Homepage = "https://github.com/lifeislikeaboat567/DeepCode"
Repository = "https://github.com/lifeislikeaboat567/DeepCode"
Issues = "https://github.com/lifeislikeaboat567/DeepCode/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2.1",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-setuptools",
]
search = [
    "tavily-python>=0.3.0",
]

[project.scripts]
deepcode = "deepcode.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepcode*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["deepcode"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["deepcode"]
omit = ["deepcode/ui/*", "tests/*"]
